# raytracer

./: .gitignore  Cargo.toml  README.md
lib/: Cargo.toml
lib/benches/: my_benchmark.rs
lib/src/: camera.rs  color.rs  grid.rs  hittable.rs  lib.rs  material.rs  metrics.rs  point.rs  ray.rs  render.rs  vector.rs
src/: average.rs  camera.rs  color.rs  grid.rs  hittable.rs  main.rs  material.rs  metrics.rs  ray.rs  render.rs  sphere.rs  texture.rs  vector.rs
