[package]
name = "raytracer"
version = "0.1.0"
authors = ["Adam Chalmers <achalmers@cloudflare.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
rand = {version = "0.8.3", features = ["small_rng"]}
rayon = "1.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false